--- a/views/upload.pug
+++ b/views/upload.pug
@@ -2,9 +2,9 @@ extends layouts/main.pug
 
 block content
     .form-container
-        form(action=routes.upload, method="post")
+        form(action=`/videos${routes.upload}`, method="post", enctype="multipart/form-data")
             label(for="videofile") Video File
-            input(type="file", id="video-file", name="videofile", required="true")
+            input(type="file", id="video-file", name="videoFile", required="true", accept="video/*")
             input(type="text", placeholder="Title" name="title", required="true")
             input(type="text", placeholder="Description", name="description", required="true")
             input(type="submit", value="Upload Video")
